# ffxiv_marketboard_agregator

./: .dockerignore  .env.example  Cargo.toml
aggregator/: Cargo.toml
aggregator/src/: import.rs  main.rs
aggregator/src/import/: item.rs  market.rs  server.rs
crates/aggregator/: Cargo.toml
crates/aggregator/src/: main.rs
crates/aggregator/src/db/: data.rs  mod.rs
crates/aggregator/src/import/: errors.rs  item.rs  market.rs  mod.rs  server.rs
crates/db_sdk/: Cargo.toml
crates/db_sdk/src/: errors.rs  lib.rs
crates/universalis_sdk/: Cargo.toml
crates/universalis_sdk/src/: errors.rs  lib.rs  xivapi.rs
crates/xivapi_sdk/: Cargo.toml
crates/xivapi_sdk/src/: lib.rs
db_sdk/: Cargo.toml
db_sdk/src/: item.rs  market.rs  server.rs
docker/: Dockerfile
docker/mysql/: docker-compose.yml
docker/psql/: docker-compose.yml
error/: Cargo.toml
error/src/: lib.rs
migrations/: 20230225191846_create_items_table.sql  20230225192154_create_data_centers_table.sql  20230225192217_create_worlds_table.sql  20230225192235_create_items_trade_volumes_table.sql  20230305143505_add_home_world_avg_price_to_items_trade_volumes.sql
sdk_dto/: Cargo.toml
sdk_dto/src/: item.rs  lib.rs  market.rs  server.rs
src/: config.rs  db.rs  import.rs  item.rs  lib.rs  main.rs  server.rs
src/import/: errors.rs  item.rs  server.rs  store.rs
universalis_sdk/: Cargo.toml
universalis_sdk/src/: lib.rs  market.rs  server.rs
xivapi_sdk/: Cargo.toml
xivapi_sdk/src/: lib.rs
