[package]
name = "ffxiv_marketboard_agregator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time"] }
dotenv = "0.15.0"
url = "2.3.1"