[package]
name = "xivapi_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error = { path = "../error" }
sdk_dto = { path = "../sdk_dto" }
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"