[package]
name = "agregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universalis_sdk = { path = "../universalis_sdk" }

reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "time"] }
dotenv = "0.15.0"
thiserror = "1.0.38"
envy = "0.4.2"
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
